# feishu_agent

./: .env.example  .gitignore  README.md  issue_create_meta.json  main.py  opencode.jsonc  pyproject.toml
.agent/rules/: agent.md
.agent/skill/cpp-dev/: SKILL.md
.agent/skill/document/: SKILL.md
.agent/skill/gitflow/: SKILL.md
.agent/skill/python-dev/: python-dev.skill
.agent/skill/typescript-dev/: SKILL.md
.agent/workflows/: code-reviewer-GPT.md  code-reviewer-Gemini.md  code-reviewer-claude.md
.cursor/skill/cpp-dev/: cpp-dev.skill
.cursor/skill/document/: document.skill
.cursor/skill/git-commit/: SKILL.md  git-commit.skill
.cursor/skill/python-dev/: SKILL.md
.cursor/skill/riper-5/: SKILL.md
.cursor/skill/typescript-dev/: typescript-dev.skill
.github/workflows/: ci.yml
doc/: 安装使用指南.md
doc/First_stage/: Overview.md
doc/Issue/: 代码审查-角色映射与异常处理漏洞分析-2026-01-16.md  关联项查询不完整问题分析与解决.md
doc/Planning/: Progress.md
doc/guidance/: Lark_MCP_提示词使用指南.md
scripts/: get_projects_api.py
scripts/project_space/: get_projects_details_api.py  get_projects_list_api.py
src/: mcp_server.py
src/core/: auth.py  client.py  config.py  project_client.py
src/providers/project/: manager.py  work_item_provider.py
src/schemas/: project.py
tests/: conftest.py  test_main.py  test_mcp_server.py
tests/core/: test_auth.py  test_cache.py  test_client.py  verify_env_loading.py
tests/integration/: conftest.py  test_api_response.py  test_field_extraction.py  test_priority_issue.py  test_provider_tasks.py  test_search_group.py
tests/unit/: test_mcp_server.py
(+8 files in other folders)
