[project]
name = "lark-agent"
version = "0.0.2"
description = "Lark Agent using MCP - A Model Context Protocol server for Lark Project integration"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "liangyz", email = "carepdime@gmail.com"}
]
dependencies = [
    "lark-oapi>=1.5.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.1.2",
]

[project.scripts]
lark-agent = "src.mcp_server:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

